--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+body{
+  width: 100%;
+  height: 100%;
+  background-image: url('./assets/img/wallpaper.jpg');
+  background-position:center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
